RFClassifier implementation to predict heart disease

--- a/RandomForest Implementation.ipynb
+++ b/RandomForest Implementation.ipynb
@@ -9,19 +9,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "161ad400",
+   "metadata": {},
+   "source": [
+    "This is an implementation of the RandomForest classification algorithm. This is a tree based algorithm that uses multiple decision trees to train a classification model. The algorithm creates multiple datatsets by resampling the existing dataset (with replacement), which is called bootstrapping. Typically, 1/3rd of the dataset is left out for out of bag validation. Since there are multiple models created from all these decision trees, final decision is typically taken by voting(mode) for classification purposes and mean/average for regression purposes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "fa23a23e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Reading all the packages \n",
+    "#loading all the packages \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow_data_validation as tfdv\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.ensemble import RandomForestClassifier as rf\n",
-    "from sklearn import datasets"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn import datasets\n",
+    "import time"
    ]
   },
   {
@@ -34,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "6214b9e3",
    "metadata": {},
    "outputs": [
@@ -188,7 +200,7 @@
        "4              N      0.0       Up             0  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +208,7 @@
    "source": [
     "##Reading a dataset of patient with heart disease to build a predictor which can predict heart disease in people\n",
     "\n",
-    "df = pd.read_csv('D:\\Github_projects\\Classifier- RandomForest/HeartDisease.csv')\n",
+    "df = pd.read_csv('D:\\Github_projects\\Classifier_RandomForest/HeartDisease.csv')\n",
     "print(df.dtypes)\n",
     "df.head()"
    ]
@@ -211,6 +223,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84db2087",
+   "metadata": {},
+   "source": [
+    "TensorFlow provides an excellent tool for in the form on TensorFlow Data Validation to understand the dataset better. One can explore both the data schema as well as the summary statistics for a dataset(both train and test) which are presented very cleanly in a visual form with just a few lines of code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54e9118e",
    "metadata": {},
    "source": [
@@ -219,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "bb1c3226",
    "metadata": {},
    "outputs": [],
@@ -231,11 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "7239ab37",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -473,7 +491,7 @@
        "[688 rows x 12 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,6 +499,7 @@
    "source": [
     "#creating a complete train dataset for EDA\n",
     "train_df = pd.concat([X_train, y_train], axis=1)\n",
+    "test_df = pd.concat([X_test, y_test], axis=1)\n",
     "train_df"
    ]
   },
@@ -494,10 +513,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "3940ebf0",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -528,12 +547,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e5b54b8",
+   "metadata": {},
+   "source": [
+    "1. We can see that there are no missing values in the above data, hence no imputation is required\n",
+    "2. There are a lot of zeros in fasting BS, heart disease and Old peak. It makes sense for these fields to have 0 values in them.\n",
+    "3. Most of the continuous data seems to be normally distributed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "839e70a6",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -760,10 +787,148 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6351e0f5",
+   "metadata": {},
+   "source": [
+    "The data doesn't need imputation, and we don't need to normalise the data while working with tree based models(adds no value and may mess up the results too). The objective here will be to maximize the accuracy/precision/ recall from the model. Let's build a baseline model with the data as is, and come back to this step incase we're unhappy with the results and need to do some bucketing etc\n",
+    "\n",
+    "We're transforming the categorical variables to dummy variables with int values otherwise the model throws an error as its unable to process categorical variables "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "80ee720a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_columns = ['Sex', 'ChestPainType', 'RestingECG', 'ExerciseAngina', 'ST_Slope']\n",
+    "dum_df = pd.get_dummies(X_train, columns=cat_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5996a716",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ccd5a68",
+   "metadata": {},
+   "source": [
+    "The RandomForest function provided by sklearn has a lot of parameters that is useful to get the best performance out of the model. Let's run a search to find the best parameters for our data. We'll use the RandomizedSearchCV function from the sklearn.model_selection to come up with the best hyperparameters. The advantage this package has over a regular gridsearch is that instead of going through each and every combination of parameters in the search, it goes through random combinations coming up with the best parameters, thus saving computation power and time, but there are obvious tradeoffs such as lower accuracy and variance in results everytime its executed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d6fbbd",
+   "metadata": {},
+   "source": [
+    "Let's talk about the major hyperparameters we need to tune for this model\n",
+    "\n",
+    "1. max_depth: This is the maximum depth of the tree, this parameter is used to cap the level till which the tree should be broken out\n",
+    "2. max_features: This parameter lets the model know how many features to select from the overall pool of fields for each of the classification tree in the forest\n",
+    "3. min_samples_leaf: the minimum samples that need to be present in a leaf to be created\n",
+    "4. min_samples_split: The minimum samples required in a node for it to be considered for splitting\n",
+    "5. n_estimators: number of trees that should be built in the RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2d345abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1079.5448722839355\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "\n",
+    "grid = {\n",
+    "    'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, None],\n",
+    " 'max_features': ['auto', 'sqrt'],\n",
+    " 'min_samples_leaf': [1, 2, 4],\n",
+    " 'min_samples_split': [2, 5, 10],\n",
+    " 'n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]\n",
+    "}\n",
+    "\n",
+    "rf_class = RandomForestClassifier()\n",
+    "\n",
+    "hp_tuning = RandomizedSearchCV(estimator = rf_class, param_distributions = grid, n_iter = 100)\n",
+    "\n",
+    "hp_tuning.fit(dum_df, y_train)\n",
+    "\n",
+    "best_params_dict = hp_tuning.best_params_\n",
+    "\n",
+    "print(time.time()-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0c9ecf1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': 1200, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(best_params_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7e2de3b",
    "metadata": {},
    "source": [
     "## Building the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d4474e9",
+   "metadata": {},
+   "source": [
+    "Training the model with the gini impurity as the criteria(by default) for node selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6671b9a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(max_depth=100, max_features='sqrt', n_estimators=1200)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = RandomForestClassifier(n_estimators = best_params_dict['n_estimators'], min_samples_split = best_params_dict['min_samples_split']\n",
+    "           , min_samples_leaf = best_params_dict['min_samples_leaf'], max_features = best_params_dict['max_features'], \n",
+    "           max_depth = best_params_dict['max_depth'])\n",
+    "\n",
+    "model.fit(dum_df, y_train)"
    ]
   },
   {
@@ -775,11 +940,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6ec5b931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_mod = pd.get_dummies(X_test, columns=cat_columns)\n",
+    "y_pred = model.predict(X_test_mod)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ecb24491",
    "metadata": {},
    "source": [
     "## Accuracy Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d683b5ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8782608695652174\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b39b33e",
+   "metadata": {},
+   "source": [
+    "The model has an accuracy of ~88%, which is pretty decent for this use case"
    ]
   }
  ],
