RFClassifier implementation to predict heart disease

--- a/RandomForest Implementation.ipynb
+++ b/RandomForest Implementation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "fa23a23e",
    "metadata": {},
    "outputs": [],
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d6fbbd",
+   "id": "e6eb39ce",
    "metadata": {},
    "source": [
     "Let's talk about the major hyperparameters we need to tune for this model\n",
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0c9ecf1f",
+   "id": "07b74c43",
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,8 @@
     }
    ],
    "source": [
-    "model = RandomForestClassifier(n_estimators = best_params_dict['n_estimators'], min_samples_split = best_params_dict['min_samples_split']\n",
+    "model = RandomForestClassifier(n_estimators = best_params_dict['n_estimators']\n",
+    "            , min_samples_split = best_params_dict['min_samples_split']\n",
     "           , min_samples_leaf = best_params_dict['min_samples_leaf'], max_features = best_params_dict['max_features'], \n",
     "           max_depth = best_params_dict['max_depth'])\n",
     "\n",
@@ -942,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6ec5b931",
+   "id": "1f44cf92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -961,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d683b5ec",
+   "id": "19234378",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b39b33e",
+   "id": "3b91e8d8",
    "metadata": {},
    "source": [
     "The model has an accuracy of ~88%, which is pretty decent for this use case"
