Fix: Added precision and recall measurement snippet

--- a/RandomForest Implementation.ipynb
+++ b/RandomForest Implementation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "fa23a23e",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "import tensorflow_data_validation as tfdv\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn import datasets\n",
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "2d345abd",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1079.5448722839355\n"
+      "856.0502812862396\n"
      ]
     }
    ],
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "07b74c43",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_estimators': 1200, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 100}\n"
+      "{'n_estimators': 1800, 'min_samples_split': 2, 'min_samples_leaf': 1, 'max_features': 'auto', 'max_depth': 60}\n"
      ]
     }
    ],
@@ -908,17 +908,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "6671b9a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier(max_depth=100, max_features='sqrt', n_estimators=1200)"
+       "RandomForestClassifier(max_depth=60, n_estimators=1800)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "1f44cf92",
    "metadata": {},
    "outputs": [],
@@ -956,12 +956,12 @@
    "id": "ecb24491",
    "metadata": {},
    "source": [
-    "## Accuracy Check"
+    "## Model Performance Check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "19234378",
    "metadata": {},
    "outputs": [
@@ -969,12 +969,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8782608695652174\n"
+      "Accuracy:  87.83 %\n",
+      "Precision:  90.07 %\n",
+      "Recall:  90.07 %\n"
      ]
     }
    ],
    "source": [
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))"
+    "print(\"Accuracy: \",round(accuracy_score(y_test,y_pred)*100,2),'%')\n",
+    "print(\"Precision: \",round(precision_score(y_test,y_pred)*100,2),'%')\n",
+    "print(\"Recall: \",round(recall_score(y_test,y_pred)*100,2),'%')"
    ]
   },
   {
@@ -982,7 +986,7 @@
    "id": "3b91e8d8",
    "metadata": {},
    "source": [
-    "The model has an accuracy of ~88%, which is pretty decent for this use case"
+    "The model has an accuracy of ~88%, with pretty good precision and recall scores too"
    ]
   }
  ],
